--- a/pages-login.html
+++ b/pages-login.html
@@ -39,12 +39,12 @@
           <div class="row justify-content-center">
             <div class="col-lg-4 col-md-6 d-flex flex-column align-items-center justify-content-center">
 
-              <div class="d-flex justify-content-center py-4">
-                <a href="index.html" class="logo d-flex align-items-center w-auto">
-                  <img src="assets/img/logo.png" alt="">
-                  <span class="d-none d-lg-block">MONITOR PILEG</span>
-                </a>
-              </div><!-- End Logo -->
+				<div class="d-flex justify-content-center py-4">
+					<a href="pages-login.html" class="logo d-flex align-items-center w-auto">
+						<img src="assets/img/logo.png" alt="" style="height: 60px;">
+						<span class="d-none d-lg-block" style="font-size: 40px;">MONITOR PILEG</span>
+					</a>
+				</div><!-- End Logo -->
 
               <div class="card mb-3">
 
