--- a/pages-blank.html
+++ b/pages-blank.html
@@ -365,7 +365,7 @@
 				</div>
 
 				<div class="col-md-12">
-					<label for="subKategori" class="form-label">Kelurahan</label>
+					<label for="subKategori" class="form-label">Desa/Kelurahan</label>
 					<select id="subKategori" class="form-select">
 						<option selected>Pilih...</option>
 					</select>
