--- a/tables-data-CILEUNYI.html
+++ b/tables-data-CILEUNYI.html
@@ -36,7 +36,7 @@
 
     <div class="d-flex align-items-center justify-content-between">
       <a href="pages-login.html" class="logo d-flex align-items-center">
-        <img src="pages-blank.html" alt="">
+        <img src="assets/img/logo.png" alt="">
         <span class="d-none d-lg-block">MONITOR PILEG</span>
       </a>
       <i class="bi bi-list toggle-sidebar-btn"></i>
